# database

./: .env.example  .gitignore  pytest.ini  readme.md  requirements.txt
data transfer/: data_format.md
data_transfer/: USAGE.md  data_format.md
data_transfer/TMDB_Exporter/: reviews_aggregator.py  (+1 more)
data_transfer/db_importer/: pyproject.toml
data_transfer/db_importer/src/db_importer/adapter/: csv.py  db.py  models.py
data_transfer/db_importer/test/csv/: conftest.py
data_transfer/db_importer/test/database/: conftest.py  test_cases.py  test_insert.py
data_transfer/db_importer/test/fixtures/csv/invalid/invalid_jsoin_column_schema/: movies.csv
data_transfer/db_importer/test/fixtures/csv/invalid/invalid_json_column/: countries.csv  movies.csv
data_transfer/db_importer/test/fixtures/csv/invalid/invalid_json_column_shape/: movies.csv
data_transfer/db_importer/test/fixtures/csv/invalid/invalid_list_column_element_type/: companies.csv  movies.csv  people.csv
data_transfer/db_importer/test/fixtures/csv/invalid/missing_fields/: companies.csv
data_transfer/db_importer/test/fixtures/csv/invalid/wrong_date_format/: people.csv
data_transfer/db_importer/test/fixtures/csv/invalid/wrong_simple_type/: movies.csv  people.csv
data_transfer/db_importer/test/fixtures/csv/valid/: genres.csv
data_transfer/db_importer/test/unit/: conftest.py
data_transfer/db_importer/test/unit/adapter/: test_csv.py
migrations/: .gitignore  flyway.dev.toml.example  flyway.toml  readme.md
schema/: moo-v-db.puml
tests/: conftest.py  integration_test.py  test_tmdb_exporter.py
(+8 files in other folders)
