[project]
name    = "db_importer"
version = "0.0.1"

dependencies = [
	"pandas >= 2.3.3",
	"python-dotenv >= 1.2.1",
	"jsonschema >= 4.25.1",
	"psycopg >= 3.3.2",
]

[project.optional-dependencies]
dev = [
	"types-jsonschema >= 4.25.1",
	"pandas-stubs >= 2.3.3",
	"db_importer[test]",
]

test = [
	"pytest >= 9.0.2",
	"testcontainers >= 4.14.0",
]

[build-system]
requires      = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
db-importer = "db_importer.db_importer:main"


[tool.ruff.lint]
# Extend the default select rules to include the "I" (isort) rules
extend-select = ["I"]
